# sap-26

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_UPDATE_SUMMARY.md  CLAUDE.md  Dockerfile  Dockerfile.dev  IMPLEMENTATION_SUMMARY.md  Makefile  ORCHESTRATOR-GUIDE.md  PHASE3-STATUS.md  README.md  RECONCILIATION_FEATURE_SUMMARY.md  SECURITY-DELIVERY-SUMMARY.txt  SECURITY-REVIEW-2026-03-15.md  SETUP.md  STACK.md  STORY-301-COMPLETION-SUMMARY.md  STORY-301-IMPLEMENTATION.md  TODO.md  URSSAF_IMPLEMENTATION.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  heartbeat.py  inject.py  orchestrate.py  pyproject.toml  setup.py
.claude/: MEMORY.md
.claude/agents/: architect.md  brainstormer.md  cdc-validator.md  code-reviewer.md  gardien-etats.md  gardien-qualite.md  implementeur.md  indy-specialist.md  infra-engineer.md  orchestrateur.md  orchestrator.md  pdf-specialist.md  quality-gate-keeper.md  refactor-guide.md  revieweur.md  security-auditor.md  sheets-specialist.md  tdd-engineer.md  testeur.md  urssaf-specialist.md
.claude/commands/: banque.md  client.md  facture.md  lint.md  qualite.md  revue.md  tdd.md  test.md  urssaf.md
.claude/memory/: MEMORY.md  decisions.md  project_vision.md
.claude/rules/: golden-workflow.md  python-sap.md  python.md  reconciliation.md  sheets-schema.md  state-machine.md  tdd-workflow.md  urssaf-api.md
.claude/specs/: 02-system-architecture.md
.github/workflows/: ci.yml  deploy.yml  lint.yml  test.yml
alembic/: env.py
alembic/versions/: 3e705693df48_initial_schema_from_existing_models.py
app/: __init__.py  config.py  database.py  main.py  security.py
app/adapters/: __init__.py  sheets_adapter.py
app/cli/: main.py
app/integrations/: swan_client.py  swan_exceptions.py  urssaf_client.py  urssaf_exceptions.py
app/models/: __init__.py  audit_log.py  bank_transaction.py  client.py  email_queue.py  invoice.py  payment_reconciliation.py  payment_request.py  reconciliation.py  user.py
app/repositories/: bank_transaction_repository.py  client_repository.py  invoice_repository.py  payment_request_repository.py
app/routers/: __init__.py  clients.py  health.py  invoices.py
app/schemas/: client.py  invoice.py
app/services/: __init__.py  audit_service.py  client_service.py  dashboard_service.py  encryption_service.py  export_service.py  invoice_service.py  log_filter.py  logo_service.py  pdf_service.py  reconciliation_service.py  urssaf_service.py
app/tasks/: scheduler.py
archive/phase1-3-docs/: bmm-workflow-status.yaml
bmad/: AGENT-MANIFEST.md  ORCHESTRATION.md  README.md  config.yaml  model-routing.yaml
bmad/agents/: analyst.md  architect.md  developer.md  product-owner.md  qa-tester.md  reviewer.md  scrum-master.md  ux-designer.md
bmad/templates/: architecture-template.html  inject.py  prd-template.html  review-report-template.html  sprint-board-template.html  test-plan-template.html
bmad/workflows/: GATES-AT-A-GLANCE.md  INDEX.md  README.md  VERIFICATION.txt  quality-gates.yaml  sap-facture-pipeline.yaml
claive/: inject.py
claive/config/: agents.yaml
claude-config/: CLAUDE-global.md  README.md  plan.md  statusline-command.sh
claude-config/agents/: README.md
claude-config/hooks/: cost-tracker.js  memory-auto-capture.js  pre-compact-context.js  python-ruff-format.js  security-gate.js  session-summary.js
claude-config/mcp/: README.md
claude-config/memory/: entities.md  hot-memory.md  observations.md
claude-config/plugins/: installed_plugins.json
claude-config/settings/: global-settings.json  project-settings.json
config/: agents.yaml
deploy/: deploy.sh  nginx.conf  sap-facture.service
doc/: 00-README.md  01-analyse-besoins-initiale.md  02-ARCHITECTURE.md  02-priorisation-scenarios.md  03-questions-clarification.md  04-methodologie-analyse.md  05-exemple-prd-structure.md  ANALYSE-COMPLETE.txt  ARCHITECTURE-INDEX.md  ARCHITECTURE-RESUME-EXEC.md  ARCHITECTURE.md  COMMENCER-ICI.md  GETTING-STARTED-DEV.md  GUIDE-LECTURE.md  INDEX.md  QUESTIONNAIRE-JULES.txt  SPRINT-PLAN-INDEX.md  SPRINT-PLAN.md  SYNTHESE-PHASE-ANALYSE.md  UX-SPECIFICATIONS.md  VALIDATION-ARCHITECTURE.md
doc/schemas/: 00-INDEX.md  01-parcours-utilisateur.md  02-flux-facturation.md  03-sequence-api-urssaf.md  06-rapprochement-bancaire.md  07-cycle-vie-facture.md
docs/: AUDIT-REPORT.md  BRANCHING.md  CDC.md  DEPLOYMENT.md  DETTE-TECHNIQUE.md  DEVIATION_INDY_PLAYWRIGHT.md  GMAIL_IMAP_RESEARCH.md  INCIDENT_RESPONSE.md  NODRIVER_2FA_QUICK_REF.md  SCHEMAS.html  SECURITY-CODE-REVIEW.md  SECURITY-INDEX.md  SECURITY-QUICK-REFERENCE.md  SECURITY-SUMMARY.md  STATUS-REPORT.md  TESTING.md  URSSAF_CLIENT.md  URSSAF_SERVICE.md  WORKFLOW-COMPLIANCE.md  creative.md  evals.md  plan-google.md  plan.md  plan1.md
docs/architecture/: README.md  (+3 more)
examples/: indy_2fa_nodriver_example.py  indy_oauth_automation.py  network_logger_example.py
lib/: costs.py  dashboard.py  kitty.py
src/: app.py  cli.py  config.py
tests/: __init__.py  conftest.py  test_adapters_playwright.py  test_ais_api.py  test_ais_fallback.py  test_ais_scrape.py  test_app.py  test_bank_reconciliation.py  test_cli_reconcile.py  test_cli_status.py  test_cli_sync.py  test_client.py  test_config.py  test_cotisations_service.py  test_csv_fixture.py  test_email_notifier.py  test_email_renderer.py  test_gmail_api_reader.py  test_gmail_reader.py  test_indy_2fa_adapter.py  test_indy_api_adapter.py  test_indy_auto_login.py  test_indy_export.py  test_init_formulas.py  test_invoice.py  test_lettrage.py  test_lettrage_service.py  test_master_fixture.py  test_network_logger.py  test_notification_lifecycle.py  test_notification_service.py  test_nova_reporting.py  test_patito_models.py  test_payment_tracker.py  test_sap_init.py  test_scheduler.py  test_sheets_batch.py  test_sheets_fk.py  test_sheets_infra.py  test_sheets_reads.py  (+4 more)
tools/: README.md  create_test_spreadsheet.py  gmail_auth.py  indy_2fa.py  indy_api_test.py  indy_intercept.py  indy_oauth.py  indy_oauth_discovery.py  reset_test_data.py  seed_test_data.py  validate_fixtures.py
(+224 files in other folders)
