[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sap-facture"
version = "0.1.0"
description = "Plateforme facturation URSSAF pour micro-entrepreneurs en services à la personne"
authors = [
    {name = "Jules Willard", email = "contact@sap-facture.com"}
]
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Web Framework
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",

    # Google APIs
    "gspread==6.1.1",
    "google-auth-oauthlib==1.2.0",
    "google-auth-httplib2==0.2.0",
    "google-api-python-client==2.101.0",

    # HTTP Client
    "httpx==0.25.2",
    "aiohttp==3.9.1",

    # PDF Generation
    "weasyprint==60.1",

    # Email
    "aiosmtplib==3.0.1",

    # CLI
    "click==8.1.7",

    # Logging
    "python-json-logger==2.0.7",

    # Data Validation
    "email-validator==2.1.0",

    # Utilities
    "python-dateutil==2.8.2",
    "pytz==2024.1",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==7.4.3",
    "pytest-asyncio==0.23.2",
    "pytest-cov==4.1.0",
    "pytest-watch==4.2.0",
    "pytest-mock==3.12.0",

    # Mocking
    "responses==0.24.1",
    "faker==22.2.0",
    "factory-boy==3.3.0",

    # Linting & Formatting
    "ruff==0.2.0",
    "mypy==1.7.1",
    "mypy-extensions==1.0.0",

    # Type stubs
    "types-python-dateutil==2.8.19.14",

    # Pre-commit
    "pre-commit==3.6.0",

    # Documentation
    "mkdocs==1.5.3",
    "mkdocs-material==9.5.3",
]

[project.scripts]
sap = "app.cli.commands:cli"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = """
    -ra
    --strict-markers
    --strict-config
    --cov-branch
    --cov-report=term-missing:skip-covered
"""
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration",
    "unit: marks tests as unit",
]

[tool.coverage.run]
branch = true
omit = [
    "tests/*",
    "app/main.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
