[project]
name = "sap-facture"
version = "0.1.0"
description = "Orchestrateur SAP — Google Sheets + Indy Playwright + Dashboard FastAPI"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "httpx>=0.27",
    "click>=8.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "rich>=13.7",
    "gspread>=6.1",
    "google-auth>=2.30",
    "playwright>=1.44",
    "patchright>=1.58",
    "camoufox[geoip]>=0.4.11",
    "playwright-stealth>=1.0",
    "weasyprint>=62",
    "polars[all]>=1.0",
    "cachetools>=5.3",
    "pybreaker>=1.2",
    "tenacity>=8.3",
    "patito>=0.8.6",
    "nodriver>=0.48.1",
    "google-api-python-client>=2.193.0",
    "google-auth-oauthlib>=1.3.0",
    "google-auth-httplib2>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "pyright>=1.1",
]

[project.scripts]
sap = "src.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH", "RUF"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x --tb=short -q --cov=src --cov-fail-under=80 -m 'not integration_ais'"
markers = [
    "integration_ais: Tests requiring real AIS connection (skip in CI)",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "freezegun>=1.5.5",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
